--- a/css/add_task.css
+++ b/css/add_task.css
@@ -1,20 +1,28 @@
+::-webkit-datetime-edit { color: var(--placeholder-color) }
+
+/* ::-webkit-datetime-edit-fields-wrapper { background: silver; }
+::-webkit-datetime-edit-text { color: red; padding: 0 0.3em; }
+::-webkit-datetime-edit-month-field { color: blue; }
+::-webkit-datetime-edit-day-field { color: green; }
+::-webkit-datetime-edit-year-field { color: purple; }
+::-webkit-inner-spin-button { display: none; }
+::-webkit-calendar-picker-indicator { background: orange; } */
+
 .content-container {
     margin-top: 80px;
     padding: 48px 16px 0 16px;
 
 }
 
-.default-text::placeholder {
-    color: black !important;
-}
-
 .input_at {
     padding: 10px 21px !important;
 }
-.input_at input {
-    font-size: 16px !important;
-}
 
+
+.input_at input,
+.textarea-style {
+    font-size: 20px !important;
+}
 
 
 .rotate-arrow {
@@ -31,11 +39,62 @@
 .dropdown {
     height: 0;
     opacity: 0;
-    overflow-y: auto;
-    transition: all 300ms ease-in-out;
+    font-size: 16px;
+    transition: height 300ms ease-in-out;
 }
 
 .dropdown.active {
-    height: 100px;
+    overflow-y: auto;
+    height: 300px;
     opacity: 1;
+}
+
+.at-label-style {
+    margin-block: 8px;
+    font-size: 20px;
+}
+
+.at-label-style sup,
+.content-bottom-container span sup {
+    color: #FF8190;
+}
+
+.circle-style {
+    background: rgb(44, 44, 93);
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+}
+
+.assigned-to-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 4px;
+    padding: 16px 7px;
+}
+
+
+.assigned-to-user {
+    display: flex;
+    justify-content: start;
+    gap: 16px;
+    align-items: center;
+    font-size: 20px;
+}
+
+
+
+.assigned-to-box svg {
+    margin-right: 52px;
+}
+
+
+.assigned-to-box.selected-contact {
+    background: var(--mockup-color);
+    border-radius: 10px;
+}
+
+.assigned-to-box.selected-contact svg rect {
+    stroke: white; 
 }
