--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -1,20 +1,43 @@
+<link rel="stylesheet" href="/css/footer.css">
+<footer class="footer">
+    <div>
+        <div class="desktop-logo">
+            <img src="/assets/img/footer_logo.png" alt="Join Logo">
+        </div>
 
-<footer class="footerCLass">
-    <div class="footer-complet">
-        <div class="footer-icon-box">
-            <a href="/summary.html" class="footer-link"><img src="/assets/img/summary_Icons.png" alt="Summary" class="footer-icon"> <span> Summary </span></a>
+        <div class="menu-box">
+            <div class="footer-icon-box">
+                <a href="/summary.html" class="footer-link">
+                    <img src="/assets/img/summary_Icons.png" alt="Summary" class="footer-icon"> 
+                    Summary
+                </a>
+            </div>
+            <div class="footer-icon-box">
+                <a href="/board.html" class="footer-link">
+                    <img src="/assets/img/Board_Icons.png" alt="Board" class="footer-icon">
+                    Board
+                </a>
+            </div>
+            <div class="footer-icon-box">
+                <a href="/add_task.html" class="footer-link">
+                    <img src="/assets/img/Add_Tasks_Icon.png" alt="Add Tasks" class="footer-icon">
+                    Add Tasks
+                </a>
+            </div>
+            <div class="footer-icon-box">
+                <a href="/contacts.html" class="footer-link">
+                    <img src="/assets/img/Contacts_Icons.png" alt="Contacts" class="footer-icon">
+                    Contacts
+                </a>
+                </div>
+            </div>
         </div>
-        <div class="footer-icon-box">
-            <a href="/board.html" class="footer-link"><img src="/assets/img/Board_Icons.png" alt="Board" class="footer-icon">Board</a>
+
+       
+        <div class="desktop-data-box">
+            <a href="/privacy_policy.html" class="desktop-data-link">Privacy Policy</a>
+            <a href="/legal_notice.html" class="desktop-data-link">Legal notice</a>
         </div>
-        <div class="footer-icon-box">
-            <a href="/add_task.html" class="footer-link">
-                <img src="/assets/img/Add_Tasks_Icon.png" alt="Add Tasks" class="footer-icon">
-                Add Tasks
-            </a>
-        </div>
-        <div class="footer-icon-box">
-            <a href="/contacts.html" class="footer-link"><img src="/assets/img/Contacts_Icons.png" alt="Contacts" class="footer-icon">Contacts</a>
-        </div>
+        
     </div>
 </footer>
