--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-@font-face {
+/*@font-face {
     font-family: 'Roboto';
     src: url('./webfonts/roboto/Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}
+}*/
 
 :root {
     --mockup-color: #2a3647;
