--- a/css/contacts.css
+++ b/css/contacts.css
@@ -49,6 +49,11 @@
     font-weight: bold;
     font-size: 24px;
     background-color: var(--mockup-color);
+    margin-top: 100px;
+}
+
+.addContactCloseXButtonMobile:active {
+    color: var(--light-blue);
 }
 
 .addContactBlockHeaderMobile {
@@ -460,22 +465,6 @@
     position: fixed;
     top: 1em;
     right: 2em;    
-}
-
-.addContactCloseXButtonMobile {
-    width: 32px;
-    height: 32px;
-    border-radius: 56px;
-    border: 0;
-    color: white;
-    font-weight: bold;
-    font-size: 24px;
-    background-color: var(--light-grey);
-    cursor: pointer;
-}
-
-.addContactCloseXButtonMobile:active {
-    color: var(--light-blue);
 }
 
 .addContactBlockHeader {
