--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,5 +1,5 @@
 
-<header>
+<header class="header">
     <div class="header-gap">
         <img class="header-logo" src="/assets/img/logo.png" alt="join logo">
 
