--- a/css/contacts.css
+++ b/css/contacts.css
@@ -548,6 +548,7 @@
 
 @media only screen and (max-width: 4000px) and (min-width: 760px) {
     .contactsContent {
+        display: flex;
         max-width: max-content;
         margin-top: 100px;
         margin-left: 220px;
