--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/*@font-face {
-    font-family: 'Roboto';
-    src: url('./webfonts/roboto/Roboto-Regular.ttf') format('truetype');
+@font-face {
+    font-family: 'Inter';
+    src: url('/assets/fonts/Inter/InterVariableFontslntwght.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }*/
@@ -35,7 +35,7 @@ h2 {
     padding: 0px;
     margin:0px;
     box-sizing: border-box;
-    font-family: 'Roboto';
+    font-family: 'Inter';
     text-decoration: none;
 }
 
