--- a/css/contacts.css
+++ b/css/contacts.css
@@ -535,14 +535,92 @@
     margin-top: 1.5rem;
 }
 
-.contactsContentDesktop {
-    display: none;
-}
-
-.addContactButtonContainerDesktop {
-    display: none;
-}
-
 /* Desktop view */
 /*-----------------------------------------------------------------------------------------------------------------------*/
 
+@media only screen and (max-width: 2500px) and (min-width: 760px) {
+    .allContacts {
+        position: relative;
+        overflow-y: auto;
+        padding-top: 100px;
+        padding-bottom: 60px;
+        margin-left: 240px;
+    }
+
+    .letterAndContactsContainer {
+        display: flex;
+        align-items: center;
+        margin: 10px;
+        border-bottom: 2px solid var(--placeholder-color);
+        padding-bottom: 10px;
+    }
+
+    .addContactButtonContainerDesktop {
+        display: flex;    
+        align-items: center;
+        position: sticky;
+        bottom: 32px;
+        right: 32px;
+        cursor: pointer;
+        margin-top: 4vh;
+        margin-right: 60px;
+        margin-left: 60px;
+        margin-bottom: 2vh;
+        height: 27px;    
+    }
+
+    .addContactButtonDesktop {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 20vw;
+        height: 4vw;
+        margin-top: 2vh;
+        margin-bottom: 1vh;
+        background-color: var(--mockup-color);
+        border: 0;
+        border-radius: 10px;
+        color: var(--white-color);
+        padding: 12px 0 12px 0;
+        font-size: 21px;
+        font-weight: 700;
+        gap: 16px;    
+        flex-shrink: 0;
+        text-align: center;
+        background-size: 10%;
+        cursor: pointer;
+    }
+    
+    .addContactButtonDesktop:hover {
+        background-color: var(--mockup-highlight);
+    }
+    
+    .addContactButtonDesktopImg {    
+        width: 32px;
+        height: 32px;    
+    }
+
+    .oneContactContainerH2Desktop {
+        color: black;
+        font-size: 20px;
+        font-weight: 400;
+    }
+
+    .contact-first-letter-desktop {
+        margin: 0;
+    }
+
+    .contact-info-container-Desktop {
+        display: flex;
+        flex-direction: column;  
+        flex: 1;    
+        cursor: pointer;
+        padding: 15px 24px 15px 24px;
+    }
+
+    .oneContactContainerAElementDesktop {
+        color: var(--hyper-link-color);
+        text-decoration: none;
+        cursor: pointer;        
+    }
+}
