--- a/css/add_task.css
+++ b/css/add_task.css
@@ -8,6 +8,9 @@
 .input_at {
     padding: 10px 21px !important;
 }
+.due_date_at {
+    padding: 10px 15px 10px 21px !important;
+}
 
 .input_at input,
 .textarea-style {
@@ -30,10 +33,8 @@
     position: relative;
     max-height: 0;
     opacity: 0;
-    font-size: 16px;
     overflow: hidden;
     transition: all 300ms ease-in-out;
-    z-index: 1;
 }
 
 .at-dropdown.active {
@@ -81,7 +82,7 @@
     justify-content: start;
     gap: 16px;
     align-items: center;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .assigned-to-box svg {
@@ -91,6 +92,7 @@
 .assigned-to-box.selected-contact {
     background: var(--mockup-color);
     border-radius: 10px;
+    color: white;
 }
 
 .assigned-to-box.selected-contact svg path {
@@ -126,7 +128,6 @@
     max-height: 0;
     opacity: 0;
     overflow: hidden;
-    font-size: 16px;
     transition: all 300ms ease-in-out;
     z-index: 1;
 }
@@ -145,8 +146,44 @@
     list-style: none;
     padding: 12px 16px;
     font-size: 22px;
+    cursor: pointer;
+    margin: 4px;
 }
 
+.category-dropdown ul li.selected-contact {
+    background: var(--mockup-color);
+    border-radius: 10px;
+    color: white;
+}
 
+.subtasks-decision-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+}
 
+.vertical-line {
+    height: 24px;
+    width: 1px;
+    border-radius: 1px;
+    background: var(--placeholder-color);
+}
 
+.d-none {
+    display: none;
+}
+
+.subtask-list {
+    margin-block: 8px;
+}
+
+.subtask-list ul  {
+  list-style-position: inside;
+  
+}
+
+.subtask-list ul li {
+    font-size: 22px;
+    padding: 14.5px 0px 14.5px 16px;
+}
