--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,14 @@
 .footer {
     background-color: #2a3647;
+    position: absolute;
     width: 232px;
+    bottom: 0;
     top: 0;
     left: 0;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    z-index: 1000;
 }
 
 .desktop-logo {
@@ -68,14 +71,14 @@
 @media (max-width: 760px) {
 
     .footer{
-    height: 80px;
-    width: auto;
-    position: fixed;
-    top: auto;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
+        height: 80px;
+        width: auto;
+        position: fixed;
+        top: auto;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
     }
 
     .desktop-logo {
