--- a/css/contacts.css
+++ b/css/contacts.css
@@ -4,11 +4,16 @@
     display: none;
 }
 
+.contactsContent {
+    overflow-y: auto;
+}
+
 .allContacts {
     position: relative;
     overflow-y: auto;
     padding-top: 100px;
     padding-bottom: 60px;
+    height: 100vh;
 }
 
 .addContactButtonContainerMobile {
