error-border wenn user trying  to skip edit subtastk menu

--- a/css/add_task.css
+++ b/css/add_task.css
@@ -240,6 +240,11 @@
     border-bottom: 1px solid var(--mockup-highlight);
 }
 
+.red-line-highlight {
+    border-bottom: 2px solid var(--err-msg-color);
+
+}
+
 .d-none {
     display: none;
 }
