centered sidebar menu

--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -6,31 +6,33 @@
         </div>
 
         <div class="menu-box">
-            <div class="footer-icon-box">
-                <a href="/summary.html" class="footer-link">
-                    <img src="/assets/img/summary_Icons.png" alt="Summary" class="footer-icon"> 
-                    Summary
-                </a>
-            </div>
-            <div class="footer-icon-box">
-                <a href="/board.html" class="footer-link">
-                    <img src="/assets/img/Board_Icons.png" alt="Board" class="footer-icon">
-                    Board
-                </a>
-            </div>
-            <div class="footer-icon-box">
-                <a href="/add_task.html" class="footer-link">
-                    <img src="/assets/img/Add_Tasks_Icon.png" alt="Add Tasks" class="footer-icon">
-                    Add Tasks
-                </a>
-            </div>
-            <div class="footer-icon-box">
-                <a href="/contacts.html" class="footer-link">
-                    <img src="/assets/img/Contacts_Icons.png" alt="Contacts" class="footer-icon">
-                    Contacts
-                </a>
+            <div class="menu-content" >
+                <div class="footer-icon-box">
+                    <a href="/summary.html" class="footer-link">
+                        <img src="/assets/img/summary_Icons.png" alt="Summary" class="footer-icon"> 
+                        Summary
+                    </a>
                 </div>
-            </div>
+                <div class="footer-icon-box">
+                    <a href="/board.html" class="footer-link">
+                        <img src="/assets/img/Board_Icons.png" alt="Board" class="footer-icon">
+                        Board
+                    </a>
+                </div>
+                <div class="footer-icon-box">
+                    <a href="/add_task.html" class="footer-link">
+                        <img src="/assets/img/Add_Tasks_Icon.png" alt="Add Tasks" class="footer-icon">
+                        Add Tasks
+                    </a>
+                </div>
+                <div class="footer-icon-box">
+                    <a href="/contacts.html" class="footer-link">
+                        <img src="/assets/img/Contacts_Icons.png" alt="Contacts" class="footer-icon">
+                        Contacts
+                    </a>
+                    </div>
+                </div>
+        </div>
         </div>
 
        
