--- a/css/add_task.css
+++ b/css/add_task.css
@@ -8,6 +8,11 @@
     padding: 48px 16px 0 16px;
     z-index: 100;
 }
+.content-container h1 {
+    font-size: 47px;
+    line-height: 56.4px;
+    font-weight: 700;
+}
 
 .input_at {
     padding: 10px 21px !important;
@@ -248,3 +253,18 @@
     display: none;
 }
 
+@media (min-width: 760px) {
+    .content-container {
+        position: static;
+        margin: 279px  calc(232px + 96px);
+        overflow-x: hidden;
+        display: flex;
+        gap: 32px;
+    }
+    .content-container h1 {
+        position: absolute;
+        top: 206px;
+        font-size: 61px;
+        line-height: 73.2px;
+    }
+}
