--- a/css/add_task.css
+++ b/css/add_task.css
@@ -81,7 +81,7 @@
 }
 
 .filled-btn {
-    font-size: 20px;
+    font-size: 22px;
     height: 45px;
     display: flex;
     align-items: center;
@@ -249,22 +249,52 @@
 
 }
 
+.hide-clear-btn {
+    display: none;
+    font-size: 22px;
+    height: 45px;
+}
+
 .d-none {
     display: none;
 }
 
 @media (min-width: 760px) {
+    .at-section {
+        width: 100%;
+    }
     .content-container {
         position: static;
-        margin: 279px  calc(232px + 96px);
+        margin: 279px auto 0 calc(232px + 96px); 
+        padding-right: 96px;
         overflow-x: hidden;
         display: flex;
         gap: 32px;
+    }
+    .vertical-bar  {
+        height: 424px;
+        background-color: var(--placeholder-color);
+        border-radius: 1px;
+        width: 1px;
     }
     .content-container h1 {
         position: absolute;
         top: 206px;
         font-size: 61px;
         line-height: 73.2px;
+    }
+    .hide-clear-btn {
+        display: block;
+        font-size: 22px;
+    }
+    .content-bottom-container {
+        max-width: 810px;
+        margin: 279px 96px 0 calc(232px + 96px);
+        bottom: 0px;
+    }
+    .bottom-btns-container {
+        
+        display: flex;
+        gap: 16px;
     }
 }
