--- a/css/contacts.css
+++ b/css/contacts.css
@@ -552,7 +552,7 @@
         padding-top: 100px;
         padding-bottom: 60px;
         margin-left: 240px;
-        min-width: 20vw;
+        max-width: 30vw;
     }
 
     .letterAndContactsContainer {
@@ -644,13 +644,14 @@
     .contactsContentRightSide {
         display: flex !important;
         flex-direction: column;
-        min-width: calc(70vh - 232px);
+        min-width: calc(70vw - 232px);
         background-color: var(--white-grey);
         /* position: sticky; */
         top: 10px;
         /* max-height: calc(100vh - 100px); /* Calculate the maximum height (100vh minus header-height) */
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
         margin-left: 5px;
+        margin-top: 40px;
     }
 
     .contactsContentRightSideHeadLine {
@@ -786,7 +787,7 @@
 
     .openContactUserImgDesktop {
         height: 120px;
-        width: 120px;    
+        min-width: 120px;    
         display: flex;
         justify-content: center;
         align-items: center;
