contacts.css class .openContactEmailLinkDesktop:hover color changed

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -762,7 +762,7 @@
     }
     
     .openContactEmailLinkDesktop:hover {
-        color: var(--light-blue);
+        color: var(--mockup-highlight);
     }
 
     .contactsContentRightSideContactPhoneH2DesktopContainer {
