contacts_mobile.js scroll y changed becaus of colision with header and contacts.css @media only screen and (max-width: 2500px) and (min-width: 760px) .allContacts margin-top: 80px; added

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -553,6 +553,7 @@
         padding-bottom: 60px;
         margin-left: 240px;
         max-width: 30vw;
+        margin-top: 80px;
     }
 
     .letterAndContactsContainer {
