--- a/css/contacts.css
+++ b/css/contacts.css
@@ -549,7 +549,7 @@
     .allContacts {        
         position: relative;
         overflow-y: auto;
-        padding-top: 100px;
+        padding-top: 0;
         padding-bottom: 60px;
         margin-left: 240px;
         max-width: 30vw;
