--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --hyper-link-color: #007cee;
     --err-msg-color: #ff3333;
     --white-grey: #f6f7f8;
+    --white-grey2: #d9d9d9;
 }
 
 @font-face {
