--- a/css/contacts.css
+++ b/css/contacts.css
@@ -809,6 +809,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        z-index: 1001;
     }
 
     .overlay-content {    
