--- a/css/footer.css
+++ b/css/footer.css
@@ -30,6 +30,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    width: 100%;
 }
 
 .footer-icon-box {
@@ -37,6 +38,10 @@
     display: flex;
     justify-content: start;
     align-items: center;
+}
+
+.footer-icon-box:hover {    
+    background-color: var(--focus-color-btn);
 }
 
 .footer-icon {
@@ -53,6 +58,11 @@
     color: #a8a8a8;
     font-size: 18px;
     font-weight: 400;
+    margin-left: 60px;
+}
+
+.footer-link:hover {
+    color: var(--white-color);
 }
 
 .desktop-data-box {
@@ -68,6 +78,14 @@
     color: #a8a8a8;
     padding: 8px;
     gap: 8px;
+    transition: transform 0.5s ease;
+}
+
+.desktop-data-link:hover {
+    color: var(--mockup-highlight);
+    cursor: pointer;
+    transform: scaleX(1.2);
+    font-size: 1rem;
 }
 
 @media (max-width: 760px) {
