--- a/css/add_task.css
+++ b/css/add_task.css
@@ -41,12 +41,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 10px 21px !important;
 }
 
-
 .due_date_at {
     padding: 10px 15px 10px 21px !important;
 
 }
-
 
 .input_at input,
 .textarea-style {
@@ -145,6 +143,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 16px 7px;
     border-radius: 10px;
 }
+
 .assigned-to-box:hover {
     background: var(--placeholder-color);
 }
@@ -181,10 +180,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border-radius: 10px;
     color: white;
 }
+
 .assigned-to-box.selected-contact:hover {
     background: var(--focus-color-btn);
 
 }
+
 .assigned-to-box.selected-contact svg path {
     stroke: white; 
 }
@@ -213,10 +214,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     box-shadow: 0 0px 10px  var(--placeholder-color);
     transition: all 300ms  ease-in-out;
 }
+
 .at-prio-img img:hover {
     box-shadow: -5px  10px 20px var(--placeholder-color); 
     transform: translate3d(0, -5px, 0); 
-  }
+}
 
 .at-prio-img-green:active {
     box-shadow: 0 0px 5px  #7AE229;
@@ -258,9 +260,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border-radius: 10px;
     transition: all 300ms  ease-in-out;
 }
+
 .category-dropdown ul li:hover {
     background: var(--placeholder-color);
 }
+
 .category-dropdown ul li:active {
     background: var(--focus-color-btn);
     color: white;
@@ -271,9 +275,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border-radius: 10px;
     color: white;
 }
+
 .category-dropdown ul li.selected-contact:hover {
     background: var(--focus-color-btn);
 }
+
 .subtasks-decision-img {
     display: flex;
     justify-content: center;
@@ -316,6 +322,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 1px;
     background-color: var(--mockup-highlight);
 }
+
 .subtask-list ul li.red-line-highlight::after {
     content: '';
     position: absolute;
@@ -328,10 +335,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .disabled-svg {
     pointer-events: none;
-    opacity: 0.5; /* optional: reduziert die Deckkraft, um visuell anzuzeigen, dass es deaktiviert ist */
+    opacity: 0.5; 
   }
-
-
 
 .subtask-list ul li:hover {
     background: var(--placeholder-color);
@@ -360,8 +365,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     transition: all 300ms  ease-in-out;
 }
 
-
-
 .hide-clear-btn {
     display: none;
 }
@@ -377,9 +380,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 li:hover .hidden-Edit_menu {
     display: flex; 
 }
+
 li:active .hidden-Edit_menu {
     display: flex;
 }
+
 .d-none {
     display: none;
 }
@@ -433,7 +438,6 @@ li:active .hidden-Edit_menu {
         gap: 32px;
         max-width: 1920px;
     }
-    
     .content-top-and-left,
     .content-bottom-and-rigth {
         width: 100%;
@@ -458,7 +462,6 @@ li:active .hidden-Edit_menu {
     .editable-span {
         max-width: 20vw ;
     }
-    
 } 
 
 @media (max-width: 1013px) {
@@ -534,4 +537,3 @@ li:active .hidden-Edit_menu {
         margin-right: 2px;
     }   
 }
-
