--- a/css/header.css
+++ b/css/header.css
@@ -25,5 +25,7 @@
     border-style: solid;
     border-width: 2px;
     border-radius: 50px;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
