--- a/css/footer.css
+++ b/css/footer.css
@@ -59,6 +59,7 @@
     font-size: 18px;
     font-weight: 400;
     margin-left: 60px;
+    cursor: pointer;
 }
 
 .footer-link:hover {
@@ -79,6 +80,7 @@
     padding: 8px;
     gap: 8px;
     transition: transform 0.5s ease;
+    cursor: pointer;
 }
 
 .desktop-data-link:hover {
